--- a/about.html
+++ b/about.html
@@ -92,35 +92,37 @@
         <div class="row">
 
 
+
+
+
+          <!-- ======= About Section ======= -->
+    <section id="about" style="padding-top: 20px;">
+      <div class="container section-header" style="margin-bottom: 0px;" data-aos="fade-up">
+        <div class="row">
+
+
           <div class="content">
-            <h2>Услуги</h2>
-            <h3 class="header">«Зехинли доганлар» - надежный представитель
-              в сфере охранных услуг
-              </h3>
-              <h3>Конкурентным преимуществом нашей компании являться широкий спектр услуг, включая услуги как физической, так и пультовой охраны. В связи с этим компания предоставляет следующие виды охранных услуг:</h3>
-          </div>
-          <div class="tekst">
-            <p>Частное охранное предприятие «Зехинли доганлар» основано в 22-го июня 2016 года и перерегистрировано 29-го  мая 2020 года как хозяйственное общество, чтобы приобрести дополнительные коды по ГКВЭД. Предприятие действует на основании Единого государственного реестра № 24594443 от 29-го мая 2020 года и Устава предприятия, выданного Министерством Экономики и Развития Туркменистана.
-              Основной деятельностью хозяйственного общество является предоставления охранных услуг, специализирующейся на услугах по физической и пультовой  охране объектов, и их периметра. В перечень услуг компании входят  невооруженная охрана объектов и имущества, обеспечение внутри объектного и пропускного режима на объектах, монтаж и техническое обслуживание охранной и тревожной сигнализации. Компания предоставляет охранные услуги как частным лицам, так и мелким и крупным предприятиям, а так же иностранным компаниям, работающим на территории Туркменистана.
-              Свою охранную деятельность хозяйственное общество    «Зехинли доганлар» осуществляет по единому ГКВЭД (Государственный классификатор видов экономической деятельности), введенному 01.01.2014 года, раздел 80, группа 80.1, класс 80.10, который включает в себя деятельность охранников, сторожей, вахтеров, караульных служб и группа 80.2, класс 80.20, включающий в себя обеспечение функционирования систем безопасности.
-                  Хозяйственное общество «Зехинли доганлар» имеет все необходимые нормативные документы и ресурсы для выполнения охранных услуг, в том числе транспорт и СИЗ для охранников. Компания предоставляет квалифицированных охранников с опытом работы, которые работают круглосуточно в течение 7 (семи) дней в неделю. Охранные услуги осуществляются 24 часа в сутки.
-               Также предприятие освобождает Заказчика от всяких видов рисков, касающихся здоровья работников охраны, травматизма на рабочем месте и др. так как работники застрахованы против возможных рисков травматизма на рабочем месте.
-              С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.
-              Хозяйственное общество «Зехинли доганлар» активно участвует в тендерах, проводимых иностранными компаниями таких как CNPC International (T-n), ENI (T-n), Petronas Çarigali (T-n), работающих на основании договора  по распределению продукции и Закона Туркменистана «Об углеводородных ресурсах», а так же южнокорейской компании «Hyundai Engineering Co. Ltd».
-              Цель компании соответствует его девизу «Целостность и сохранность», так как основной задачей является принятие оперативных мер по предотвращению несанкционированных проникновений, а так же обеспечения целостности и сохранности имущества охраняемого объекта.
-              Обратитесь к нам и Вы сохраните свое имущество в целостности и сохранности!
-              </p>
+            <h2 class="lang">О нас</h2>
+              <h3 class="lang header" key="about2"></h3>
+              <p>Частное охранное предприятие «Зехинли доганлар» основано в 22-го июня 2016 года и перерегистрировано 29-го  мая 2020 года как хозяйственное общество, чтобы приобрести дополнительные коды по ГКВЭД. Предприятие действует на основании Единого государственного реестра № 24594443 от 29-го мая 2020 года и Устава предприятия, выданного Министерством Экономики и Развития Туркменистана.</p>
+              <p>Основной деятельностью хозяйственного общество является предоставления охранных услуг, специализирующейся на услугах по физической и пультовой  охране объектов, и их периметра. В перечень услуг компании входят  невооруженная охрана объектов и имущества, обеспечение внутри объектного и пропускного режима на объектах, монтаж и техническое обслуживание охранной и тревожной сигнализации. Компания предоставляет охранные услуги как частным лицам, так и мелким и крупным предприятиям, а так же иностранным компаниям, работающим на территории Туркменистана.</p>
+              <p>Свою охранную деятельность хозяйственное общество    «Зехинли доганлар» осуществляет по единому ГКВЭД (Государственный классификатор видов экономической деятельности), введенному 01.01.2014 года, раздел 80, группа 80.1, класс 80.10, который включает в себя деятельность охранников, сторожей, вахтеров, караульных служб и группа 80.2, класс 80.20, включающий в себя обеспечение функционирования систем безопасности.</p>
+              <p>    Хозяйственное общество «Зехинли доганлар» имеет все необходимые нормативные документы и ресурсы для выполнения охранных услуг, в том числе транспорт и СИЗ для охранников. Компания предоставляет квалифицированных охранников с опытом работы, которые работают круглосуточно в течение 7 (семи) дней в неделю. Охранные услуги осуществляются 24 часа в сутки.</p>
+              <p> Также предприятие освобождает Заказчика от всяких видов рисков, касающихся здоровья работников охраны, травматизма на рабочем месте и др. так как работники застрахованы против возможных рисков травматизма на рабочем месте.</p>
+              <p>С июля 2016 года до июля 2022 года наше предприятие оказывало охранные услуги южнокорейской компании «HYUNDAI ENGINEERING Co. LTD» по проекту TACE - строительство завода по производству полиэтилена и полипропилена с установкой крекинга этана, на территории поселка Киянлы, Туркменбашинского этрапа  и проекту TORE – проектирование, закупка и строительство установок вакуумной перегонки мазута, алкилирование легких олефинов, смешивание бензинов, расположенных на территории Туркменбашинского КНПЗ, вахтового городка в г. Туркменбаши Балканского велаята Туркменистана.</p>
+              <p>Хозяйственное общество «Зехинли доганлар» активно участвует в тендерах, проводимых иностранными компаниями таких как CNPC International (T-n), ENI (T-n), Petronas Çarigali (T-n), работающих на основании договора  по распределению продукции и Закона Туркменистана «Об углеводородных ресурсах», а так же южнокорейской компании «Hyundai Engineering Co. Ltd».</p>
+              <p>Цель компании соответствует его девизу «Целостность и сохранность», так как основной задачей является принятие оперативных мер по предотвращению несанкционированных проникновений, а так же обеспечения целостности и сохранности имущества охраняемого объекта.</p>
+              <p>Обратитесь к нам и Вы сохраните свое имущество в целостности и сохранности!</p>
+
+            <!-- <ul>
+              <li><i class="bi bi-check-circle lang"></i></li>
+              <li><i class="bi bi-check-circle lang"></i></li>
+            </ul> -->
+            <br>
           </div>
         </div>
-
       </div>
     </section><!-- End About Section -->
-
-
-
-
-
-
 
     <!-- Start of How We work section -->
     <section class="container">
@@ -138,22 +140,22 @@
         <div class="process_step">
           <div class="process_no">2</div>
           <div class="process_item lang">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
-          <div class="process_icon"><img src="images/icons/guard.png" alt=""></div>
+          <div class="process_icon"><img src="images/icons/guard (1).png" alt=""></div>
         </div>
         <div class="process_step">
           <div class="process_no">3</div>
           <div class="process_item lang">Проведение тщательной проверки и анализа объекта для предоставления индивидуального комплекса мер по безопасности объекта</div>
-          <div class="process_icon"><img src="images/icons/analyze.png" alt=""></div>
+          <div class="process_icon"><img src="images/icons/analyze (1).png" alt=""></div>
         </div>
         <div class="process_step">
           <div class="process_no">4</div>
           <div class="process_item lang">После согласования с Заказчиком происходит монтаж необходимого оборудования</div>
-          <div class="process_icon"><img src="images/icons/safe.png" alt=""></div>
+          <div class="process_icon"><img src="images/icons/camera (3).png" alt=""></div>
         </div>
         <div class="process_step">
           <div class="process_no">5</div>
           <div class="process_item lang">Гарантирование высокого качества предоставляемых услуг и оперативное реагирование и четкость действий сотрудников даже в самой нестандартной ситуации</div>
-          <div class="process_icon"><img src="images/icons/safe2.png" alt=""></div>
+          <div class="process_icon"><img src="images/icons/safety (7).png" alt=""></div>
         </div>
 
       </div>
@@ -166,11 +168,11 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Clients</h2>
-          <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
+          <!-- <p style="font: 22px blue; font-style: italic;">Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p> -->
         </div>
 
         <div class="clients-slider swiper" data-aos="fade-up" data-aos-delay="100">
-          <div class="swiper-wrapper align-items-center">
+          <!-- <div class="swiper-wrapper align-items-center">
             <div class="swiper-slide"><img src="assets/img/clients/client-1.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-2.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-3.png" class="img-fluid" alt=""></div>
@@ -179,7 +181,8 @@
             <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
             <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
-          </div>
+          </div> -->
+          <div></div>
           <div class="swiper-pagination"></div>
         </div>
 
@@ -187,103 +190,7 @@
     </section><!-- End Clients Section -->
 
 
-    <!-- ======= Testimonials Section ======= -->
     
-
-
-
-    <!-- ======= Team Section ======= -->
-    <!-- <section id="team">
-      <div class="container" data-aos="fade-up">
-        <div class="section-header">
-          <h2>Our Team</h2>
-        </div>
-        <div class="row">
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="assets/img/team-1.jpg" alt=""></div>
-              <div class="details">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="assets/img/team-2.jpg" alt=""></div>
-              <div class="details">
-                <h4>Sarah Jhinson</h4>
-                <span>Product Manager</span>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="assets/img/team-3.jpg" alt=""></div>
-              <div class="details">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6">
-            <div class="member">
-              <div class="pic"><img src="assets/img/team-4.jpg" alt=""></div>
-              <div class="details">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
-                <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </section>End Team Section -->
-
-    
-
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong>Zehinli Doganlar HJ</strong>. All Rights Reserved
-      </div>
-      <div class="credits">
-        Designed by <a href="https://trade.com.tm">TM TRADE</a>
-      </div>
-    </div>
-  </footer><!-- End Footer -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
   <!-- Vendor JS Files -->
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
