--- a/playground.html
+++ b/playground.html
@@ -21,34 +21,66 @@
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-    <section id="shapes" class="container2">
+    <section id="work-chart" class="container2">
         <div class="grid-5x1">
-          <div class="shapes">
-            <div class="shape_text">
-              Договор
+            <div class="vertical-grid">
+                <div class="work-icons">
+                    <img src="images/icons/contract2.png" alt="kontraktyn suraty">
+                </div>
+                <div class="shapes">
+                    <div class="shape_text">
+                      Договор
+                    </div>
+                  </div>
+                  <div class="work-chart-info"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, consequatur. Ipsam praesentium, nostrum nihil veniam totam aliquam perspiciatis, possimus consequuntur ipsum corrupti excepturi reprehenderit exercitationem libero quia vero dolor eos! Deleniti in optio nobis eum? Accusamus eaque quibusdam laborum error consectetur earum molestias modi aspernatur.</p></div>
             </div>
-          </div>
-          <div class="shapes">
-            <div class="shape_text">
-                Информация
+            <div class="vertical-grid">
+                <div class="work-icons">
+                    <img src="images/icons/contract2.png" alt="kontraktyn suraty">
+                </div>
+                <div class="shapes">
+                    <div class="shape_text">
+                      Договор
+                    </div>
+                  </div>
+                  <div class="work-chart-info"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, consequatur. Ipsam praesentium, nostrum nihil veniam totam aliquam perspiciatis, possimus consequuntur ipsum corrupti excepturi reprehenderit exercitationem libero quia vero dolor eos! Deleniti in optio nobis eum? Accusamus eaque quibusdam laborum error consectetur earum molestias modi aspernatur.</p></div>
             </div>
-          </div>
-          <div class="shapes">
-            <div class="shape_text">
-                Анализ
+            <div class="vertical-grid">
+                <div class="work-icons">
+                    <img src="images/icons/contract2.png" alt="kontraktyn suraty">
+                </div>
+                <div class="shapes">
+                    <div class="shape_text">
+                      Договор
+                    </div>
+                  </div>
+                  <div class="work-chart-info"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, consequatur. Ipsam praesentium, nostrum nihil veniam totam aliquam perspiciatis, possimus consequuntur ipsum corrupti excepturi reprehenderit exercitationem libero quia vero dolor eos! Deleniti in optio nobis eum? Accusamus eaque quibusdam laborum error consectetur earum molestias modi aspernatur.</p></div>
             </div>
-          </div>
-          <div class="shapes">
-            <div class="shape_text">
-                Монтаж
+            <div class="vertical-grid">
+                <div class="work-icons">
+                    <img src="images/icons/contract2.png" alt="kontraktyn suraty">
+                </div>
+                <div class="shapes">
+                    <div class="shape_text">
+                      Договор
+                    </div>
+                  </div>
+                  <div class="work-chart-info"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, consequatur. Ipsam praesentium, nostrum nihil veniam totam aliquam perspiciatis, possimus consequuntur ipsum corrupti excepturi reprehenderit exercitationem libero quia vero dolor eos! Deleniti in optio nobis eum? Accusamus eaque quibusdam laborum error consectetur earum molestias modi aspernatur.</p></div>
             </div>
-          </div>
-          <div class="shapes">
-            <div class="shape_text">
-                Защита
+            <div class="vertical-grid">
+                <div class="work-icons">
+                    <img src="images/icons/contract2.png" alt="kontraktyn suraty">
+                </div>
+                <div class="shapes">
+                    <div class="shape_text">
+                      Договор
+                    </div>
+                  </div>
+                  <div class="work-chart-info"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, consequatur. Ipsam praesentium, nostrum nihil veniam totam aliquam perspiciatis, possimus consequuntur ipsum corrupti excepturi reprehenderit exercitationem libero quia vero dolor eos! Deleniti in optio nobis eum? Accusamus eaque quibusdam laborum error consectetur earum molestias modi aspernatur.</p></div>
             </div>
-          </div>
         </div>
       </section>
+
+
 </body>
 </html>
