--- a/playground.html
+++ b/playground.html
@@ -22,64 +22,16 @@
 </head>
 <body>
     <section id="work-chart" class="container2">
-        <div class="grid-5x1">
-            <div class="vertical-grid">
-                <div class="work-icons">
-                    <img src="images/icons/contract2.png" alt="kontraktyn suraty">
-                </div>
-                <div class="shapes">
-                    <div class="shape_text">
-                      Договор
-                    </div>
-                  </div>
-                  <div class="work-chart-info"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, consequatur. Ipsam praesentium, nostrum nihil veniam totam aliquam perspiciatis, possimus consequuntur ipsum corrupti excepturi reprehenderit exercitationem libero quia vero dolor eos! Deleniti in optio nobis eum? Accusamus eaque quibusdam laborum error consectetur earum molestias modi aspernatur.</p></div>
-            </div>
-            <div class="vertical-grid">
-                <div class="work-icons">
-                    <img src="images/icons/contract2.png" alt="kontraktyn suraty">
-                </div>
-                <div class="shapes">
-                    <div class="shape_text">
-                      Договор
-                    </div>
-                  </div>
-                  <div class="work-chart-info"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, consequatur. Ipsam praesentium, nostrum nihil veniam totam aliquam perspiciatis, possimus consequuntur ipsum corrupti excepturi reprehenderit exercitationem libero quia vero dolor eos! Deleniti in optio nobis eum? Accusamus eaque quibusdam laborum error consectetur earum molestias modi aspernatur.</p></div>
-            </div>
-            <div class="vertical-grid">
-                <div class="work-icons">
-                    <img src="images/icons/contract2.png" alt="kontraktyn suraty">
-                </div>
-                <div class="shapes">
-                    <div class="shape_text">
-                      Договор
-                    </div>
-                  </div>
-                  <div class="work-chart-info"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, consequatur. Ipsam praesentium, nostrum nihil veniam totam aliquam perspiciatis, possimus consequuntur ipsum corrupti excepturi reprehenderit exercitationem libero quia vero dolor eos! Deleniti in optio nobis eum? Accusamus eaque quibusdam laborum error consectetur earum molestias modi aspernatur.</p></div>
-            </div>
-            <div class="vertical-grid">
-                <div class="work-icons">
-                    <img src="images/icons/contract2.png" alt="kontraktyn suraty">
-                </div>
-                <div class="shapes">
-                    <div class="shape_text">
-                      Договор
-                    </div>
-                  </div>
-                  <div class="work-chart-info"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, consequatur. Ipsam praesentium, nostrum nihil veniam totam aliquam perspiciatis, possimus consequuntur ipsum corrupti excepturi reprehenderit exercitationem libero quia vero dolor eos! Deleniti in optio nobis eum? Accusamus eaque quibusdam laborum error consectetur earum molestias modi aspernatur.</p></div>
-            </div>
-            <div class="vertical-grid">
-                <div class="work-icons">
-                    <img src="images/icons/contract2.png" alt="kontraktyn suraty">
-                </div>
-                <div class="shapes">
-                    <div class="shape_text">
-                      Договор
-                    </div>
-                  </div>
-                  <div class="work-chart-info"><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime, consequatur. Ipsam praesentium, nostrum nihil veniam totam aliquam perspiciatis, possimus consequuntur ipsum corrupti excepturi reprehenderit exercitationem libero quia vero dolor eos! Deleniti in optio nobis eum? Accusamus eaque quibusdam laborum error consectetur earum molestias modi aspernatur.</p></div>
-            </div>
-        </div>
-      </section>
+      <div class="grid-5x1">
+        <div class="shapes"><div class="dogovor">1</div></div>
+        <div class="shapes"><div class="dogovor">2</div></div>
+        <div class="shapes"><div class="dogovor">3</div></div>
+        <div class="shapes"><div class="dogovor">4</div></div>
+        <div class="shapes"><div class="dogovor">5</div></div>
+      </div>
+
+      
+    </section>
 
 
 </body>
