--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@
         <div class="process_step">
           <div class="process_no">2</div>
           <div class="process_item lang">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
-          <div class="process_icon"><img src="images/icons/guard (1).png" alt=""></div>
+          <div class="process_icon"><img src="images/icons/info.png" alt=""></div>
         </div>
         <div class="process_step">
           <div class="process_no">3</div>
@@ -189,11 +189,40 @@
       </div>
     </section><!-- End Clients Section -->
 
-    <section id="shapes">
-      <div class="container">
-        <div class="shapes">
-          <div class="shape_text">
-            Договор
+    <section id="work-chart" data-aos="fade-right">
+      <div class="grid-5x1">
+        <div class="guty">
+          <div class="ikonki">
+            <img class="surat" src="images/icons/contract.png" alt="sagat">
+          </div>
+          <div class="shapes">Договор</div>
+          <div class="work-chart-text">Заключение двухсторонних контрактов на основе взаимных договоренностей</div>
+        </div>
+        <div class="guty">
+          <div class="ikonki">
+            <img class="surat" src="images/icons/info.png" alt="sagat">
+          </div>
+          <div class="shapes">Информация</div>
+          <div class="work-chart-text">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
+        </div>
+        <div class="guty">
+          <div class="ikonki">
+            <img class="surat" src="images/icons/analyze (3).png" alt="search">
+          </div>
+          <div class="shapes">Анализ</div>
+          <div class="work-chart-text">Проведение тщательной проверки и анализа объекта для предоставления индивидуального комплекса мер по безопасности объекта
+          </div>
+        </div>
+        <div class="guty">
+          <div class="ikonki"><img class="surat" src="images/icons/camera (3).png" alt=""></div>
+          <div class="shapes">Монтаж</div>
+          <div class="work-chart-text">После согласования с Заказчиком происходит монтаж необходимого оборудования
+          </div>
+        </div>
+        <div class="guty">
+          <div class="ikonki"><img class="surat" src="images/icons/guard (2).png" alt=""></div>
+          <div class="shapes">Защита</div>
+          <div class="work-chart-text">Гарантирование высокого качества предоставляемых услуг и оперативное реагирование и четкость действий сотрудников даже в самой нестандартной ситуации
           </div>
         </div>
       </div>
