--- a/playground.html
+++ b/playground.html
@@ -21,18 +21,43 @@
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-    <section id="work-chart" class="container2">
-      <div class="grid-5x1">
-        <div class="shapes"><div class="dogovor">dogovorennost1</div></div>
-        <div class="shapes"><div class="dogovor">dogovorennost2</div></div>
-        <div class="shapes"><div class="dogovor">dogovorennost3</div></div>
-        <div class="shapes"><div class="dogovor">dogovorennost4</div></div>
-        <div class="shapes"><div class="dogovor">dogovorennost5</div></div>
+  <section id="work-chart" class="container2">
+    <div class="grid-5x1">
+      <div class="guty">
+        <div class="ikonki">
+          <img class="surat" src="images/icons/contract.png" alt="sagat">
+        </div>
+        <div class="shapes">Договор</div>
+        <div class="work-chart-text">Заключение двухсторонних контрактов на основе взаимных договоренностей</div>
       </div>
-
-      
-    </section>
-
-
+      <div class="guty">
+        <div class="ikonki">
+          <img class="surat" src="images/icons/info.png" alt="sagat">
+        </div>
+        <div class="shapes">Информация</div>
+        <div class="work-chart-text">Защита объекта зависит от степени его уязвимости, расположения, площади и прочих характеристик</div>
+      </div>
+      <div class="guty">
+        <div class="ikonki">
+          <img class="surat" src="images/icons/analyze (3).png" alt="search">
+        </div>
+        <div class="shapes">Анализ</div>
+        <div class="work-chart-text">Проведение тщательной проверки и анализа объекта для предоставления индивидуального комплекса мер по безопасности объекта
+        </div>
+      </div>
+      <div class="guty">
+        <div class="ikonki"><img class="surat" src="images/icons/camera (3).png" alt=""></div>
+        <div class="shapes">Монтаж</div>
+        <div class="work-chart-text">После согласования с Заказчиком происходит монтаж необходимого оборудования
+        </div>
+      </div>
+      <div class="guty">
+        <div class="ikonki"><img class="surat" src="images/icons/guard (2).png" alt=""></div>
+        <div class="shapes">Защита</div>
+        <div class="work-chart-text">Гарантирование высокого качества предоставляемых услуг и оперативное реагирование и четкость действий сотрудников даже в самой нестандартной ситуации
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
